--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
 PORT=4000
-MONGODB_URI=mongodb+srv://it20633868:ITPMproject@itpmcluster.begy9nw.mongodb.net/?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://it20633868:ITPMproject@itpmcluster.togyqhc.mongodb.net/?retryWrites=true&w=majority
